--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -3,8 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.xsoft.science</groupId>
 	<artifactId>mathparser-java</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>Mathematical Parser For Java</name>
+	<description>MathParser Java is a cross platform math parser library written in Java</description>
+	<url>http://maven.apache.org</url>
+
 
 	<dependencies>
 		<dependency>
@@ -19,6 +23,6 @@
 			<version>1.7.2</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
+
 </project>
