--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -24,5 +24,23 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                    	<username>${svn.username}</username>
+                        <password>${svn.password}</password>
+                        <tagBase>https://mathparser-java.googlecode.com/svn/tags</tagBase>
+                    </configuration>
+            </plugin>
+        </plugins>
+    </build>
+	
+	<scm>
+        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
+        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
+    </scm>
 
 </project>
