--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.xsoft.science</groupId>
 	<artifactId>mathparser-java</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>Mathematical Parser For Java</name>
 	<description>MathParser Java is a cross platform math parser library written in Java</description>
@@ -39,8 +38,8 @@
     </build>
 	
 	<scm>
-        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
+        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</connection>
+        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</developerConnection>
     </scm>
 
 </project>
