--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.xsoft.science</groupId>
 	<artifactId>mathparser-java</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Mathematical Parser For Java</name>
 	<description>MathParser Java is a cross platform math parser library written in Java</description>
@@ -38,8 +38,8 @@
     </build>
 	
 	<scm>
-        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</connection>
-        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</developerConnection>
+        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
+        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
     </scm>
 
 </project>
