--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,15 @@
 	<packaging>jar</packaging>
 	<name>Mathematical Parser For Java</name>
 	<description>MathParser Java is a cross platform math parser library written in Java</description>
-	<url>http://maven.apache.org</url>
+	<url>http://sourceforge.net/projects/mathparser-java/</url>
 
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
@@ -24,23 +31,32 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                    <configuration>
-                    	<username>${svn.username}</username>
-                        <password>${svn.password}</password>
-                        <tagBase>https://mathparser-java.googlecode.com/svn/tags</tagBase>
-                    </configuration>
-            </plugin>
-        </plugins>
-    </build>
-	
+		<plugins>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<username>${svn.username}</username>
+					<password>${svn.password}</password>
+					<tagBase>https://mathparser-java.googlecode.com/svn/tags</tagBase>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<scm>
-        <connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
-        <developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
-    </scm>
+		<url>https://mathparser-java.googlecode.com/svn/trunk</url>  
+		<connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>danirh</id>
+			<name>Daniel Rodriguez Hernandez</name>
+			<email>daniel.rguez.hdez@gmail.com</email>
+		</developer>
+	</developers>
 
 </project>
