[MathParser] POM for release (Source and javadoc)

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,30 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
 					<username>${svn.username}</username>
@@ -46,7 +70,7 @@
 	</build>
 
 	<scm>
-		<url>https://mathparser-java.googlecode.com/svn/trunk</url>  
+		<url>https://mathparser-java.googlecode.com/svn/trunk</url>
 		<connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
 		<developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
 	</scm>
