--- a/pom.xml
+++ b/pom.xml
@@ -78,12 +78,17 @@
 						</executions>
 					</plugin>
 					<plugin>
-						<inherited>true</inherited>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-deploy-plugin</artifactId>
-
+						<artifactId>maven-release-plugin</artifactId>
 						<configuration>
-							<updateReleaseInfo>true</updateReleaseInfo>
+							<!-- This is a 2.0 beta 6 bug. By default the goals are 'clean verify', 
+								so the modules are not installed, so the dependencies between modules are 
+								not met. With this configuration we force the module installation. -->
+							<preparationGoals>clean install</preparationGoals>
+							<username>${svn.username}</username>
+							<password>${svn.password}</password>
+							<tagBase>
+								https://mathparser-java.googlecode.com/svn/tags
+							</tagBase>
 						</configuration>
 					</plugin>
 					<plugin>
