--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
@@ -10,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.google.code.mathparser-java</groupId>
 	<artifactId>mathparser-java</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<name>Mathematical Parser For Java</name>
 	<description>MathParser Java is a cross platform math parser library written in Java</description>
@@ -110,9 +109,9 @@
 	</profiles>
 
 	<scm>
-		<url>https://mathparser-java.googlecode.com/svn/trunk</url>
-		<connection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</connection>
-		<developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/trunk</developerConnection>
+		<url>https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</url>
+		<connection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</connection>
+		<developerConnection>scm:svn:https://mathparser-java.googlecode.com/svn/tags/mathparser-java-1.0.0</developerConnection>
 	</scm>
 
 	<distributionManagement>
